# cdfs

./: .gitignore  CMakeLists.txt  README.md  continuous-dataframe-stream.cbp
doc/: format.md
examples/: CMakeLists.txt  cdfsbuilder.cpp  cdfsloader.cpp  crc32.cpp  uint128.cpp
include/cdfs/: builder.hpp  cdfs.hpp  checksum.hpp  datatype.hpp  loader.hpp
src/: CMakeLists.txt  builder.cpp  cdfs.cpp  checksum.cpp  datatype.cpp  loader.cpp
